objects/Applicant_SFDC2__c.object
<CustomObject>
    <description>SFDC2: Used to capture Applicant data from external systems</description>
    <fields>
        <fullName>Account_CIF__c</fullName>
        <formula>Linked_Account__r.CIF_SFDC2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account CIF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Primary address</description>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Primary unit, apartment, suite number</description>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Direct_Mail__c</fullName>
        <description>Whether to allow direct mail solicitation</description>
        <label>Allow Direct Mail</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Email_Solicit__c</fullName>
        <description>Whether to allow email solicitaion</description>
        <label>Allow Email Solicit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Telemarket__c</fullName>
        <description>Whether to allow telemarketing</description>
        <label>Allow Telemarket</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>Alternate email</description>
        <label>Alternate Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <description>Annual income</description>
        <label>Annual Income</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Total__c</fullName>
        <description>Count of Applicants</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to sum or count the number of Applicants</inlineHelpText>
        <label>Applicant Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApplicationDecisionStatus__c</fullName>
        <formula>IF(ISBLANK( Application_Id__r.Decision_Status__c ),&apos;&apos;,Application_Id__r.Decision_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Decision Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Id__c</fullName>
        <description>Application associated with Applicant</description>
        <label>Application Id</label>
        <referenceTo>Application_SFDC2__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application_State__c</fullName>
        <formula>Application_Id__r.Application_State__c</formula>
        <label>Application State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <formula>Application_Id__r.Application_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Score__c</fullName>
        <description>Bankruptcy score</description>
        <label>Bankruptcy Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <description>JH customer identifier</description>
        <externalId>true</externalId>
        <label>CIF</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <description>Mobile phone</description>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Citizenship_Status__c</fullName>
        <description>US citizenship status</description>
        <label>Citizenship Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <description>Country of citizenship</description>
        <label>Citizenship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Primary address city</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Salesforce Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Primary address county</description>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <description>Credit score of applicant</description>
        <label>Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Score__c</fullName>
        <description>Meridian Link custom score</description>
        <label>Custom Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decline_Reason__c</fullName>
        <description>Reason(s) for decline</description>
        <label>Decline Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposable_Income__c</fullName>
        <description>Disposable income</description>
        <label>Disposable Income</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Primary email</description>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>Employer name</description>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <description>Employment status</description>
        <label>Employment Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External id for applicant/borrower</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax number</description>
        <label>Fax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name</description>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c &amp; &quot; &quot;&amp; Middle_Name__c &amp; &quot; &quot;&amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenericExternalID__c</fullName>
        <formula>Name__c &amp; &apos;-&apos; &amp; IF(NOT(ISBLANK(Email__c)),Email__c&amp;&apos; &apos;,IF(NOT(ISBLANK(Cell_Phone__c)),Cell_Phone__c&amp;&apos; &apos;,IF(NOT(ISBLANK(Home_Phone__c)),Home_Phone__c&amp;&apos; &apos;,&apos;&apos;)))</formula>
        <label>Generic External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Extension__c</fullName>
        <description>Home/Evening phone extension</description>
        <label>Home Phone Extension</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Home/Evening phone</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Identification_2_Address__c</fullName>
        <description>ID holder address 2</description>
        <label>Identification 2 Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_2_Expiration_Date__c</fullName>
        <description>ID expiration date 2</description>
        <label>Identification 2 Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identification_2_Issue_Date__c</fullName>
        <description>ID issue date 2</description>
        <label>Identification 2 Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identification_2_Issuing_State__c</fullName>
        <description>ID issuing state 2</description>
        <label>Identification 2 Issuing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_2_Number__c</fullName>
        <description>ID number 2</description>
        <label>Identification 2 Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_2_Type__c</fullName>
        <description>type of ID 2</description>
        <label>Identification 2 Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Address__c</fullName>
        <description>ID holder address</description>
        <label>Identification Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Expiration_Date__c</fullName>
        <description>ID expiration date</description>
        <label>Identification Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identification_Issue_Date__c</fullName>
        <description>ID issue date</description>
        <label>Identification Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identification_Issuing_State__c</fullName>
        <description>ID issuing state</description>
        <label>Identification Issuing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Number__c</fullName>
        <description>ID number</description>
        <label>Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Type__c</fullName>
        <description>type of ID</description>
        <label>Identification Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Declined__c</fullName>
        <description>Flag if applicant denied</description>
        <label>Is Declined</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name</description>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>LinkedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_1__c</fullName>
        <description>Mailing address line 1</description>
        <label>Mailing Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_2__c</fullName>
        <description>Mailing address line 2</description>
        <label>Mailing Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>Mailing address city</description>
        <label>Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <description>Mailing address state</description>
        <label>Mailing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Plus_4__c</fullName>
        <description>Mailing address zip code (plus 4)</description>
        <label>Mailing Zip Plus 4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip__c</fullName>
        <description>Mailing address zip code (first 5)</description>
        <label>Mailing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <description>Marital status</description>
        <label>Marital Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <description>Meridian Link membership number</description>
        <label>Member Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle name or initial</description>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_Maiden_Name__c</fullName>
        <description>Mother&apos;s maiden name</description>
        <label>Mother Maiden Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>First_Name__c &amp; &quot; &quot; &amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_in_Household__c</fullName>
        <description>Number of people in applicant household</description>
        <label>Number in Household</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>Occupation</description>
        <label>Occupation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityExtID__c</fullName>
        <formula>GenericExternalID__c &amp; Application_Id__r.Name</formula>
        <label>Opportunity External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_1__c</fullName>
        <description>Other address line 1</description>
        <label>Other Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_2__c</fullName>
        <description>Other address line 2</description>
        <label>Other Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_City__c</fullName>
        <description>Other address city</description>
        <label>Other City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_External_Id__c</fullName>
        <description>Meridian Link internal borrower id</description>
        <label>Other External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Income__c</fullName>
        <description>Annual other income</description>
        <label>Other Income</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_State__c</fullName>
        <description>Other address state</description>
        <label>Other State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Zip_Plus_4__c</fullName>
        <description>Other address zip code (plus 4)</description>
        <label>Other Zip Plus 4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Zip__c</fullName>
        <description>Other address zip code (first 5)</description>
        <label>Other Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI__c</fullName>
        <description>Payment to income</description>
        <label>PTI</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>Preferred method of contact</description>
        <label>Preferred Contact Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Address_1__c</fullName>
        <description>Previous street address line 1</description>
        <label>Previous Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Address_2__c</fullName>
        <description>Previous street address line 2</description>
        <label>Previous Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_City__c</fullName>
        <description>Previous city</description>
        <label>Previous City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_County__c</fullName>
        <description>Previous county</description>
        <label>Previous County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_State__c</fullName>
        <description>Previous state</description>
        <label>Previous State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Zip__c</fullName>
        <description>Previous zip code</description>
        <label>Previous Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifile_Score__c</fullName>
        <description>Qualifile score</description>
        <label>Qualifile Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <description>Relationship of Applicant to Business (e.g., owner)</description>
        <label>Relationship Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Type__c</fullName>
        <description>Business role</description>
        <label>Role Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>Tax id</description>
        <label>SSN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Word_Hint__c</fullName>
        <description>Security hint</description>
        <label>Security Word Hint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Word__c</fullName>
        <description>Security word</description>
        <label>Security Word</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Primary address state</description>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Suffix</description>
        <label>Suffix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Occupational title</description>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <description>Total income of applicant</description>
        <label>Total Income</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Account relationship (Primary, Joint)</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Extension__c</fullName>
        <description>Work/Daytime phone extension</description>
        <label>Work Phone Extension</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <description>Work/Daytime phone</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Years_at_Address__c</fullName>
        <description>Years at primary address</description>
        <label>Years at Address</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Plus_4__c</fullName>
        <description>Primary address zip code (plus 4)</description>
        <label>Zip Plus 4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Primary address zip code (first 5)</description>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Linked_Account__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Applicant-{0000000}</displayFormat>
        <label>Applicant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <recordTypes>
        <fullName>Andera</fullName>
        <active>true</active>
        <description>Applicants received from the Andera System</description>
        <label>Andera</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enrollment</fullName>
        <active>true</active>
        <description>Applicants received from the Enrollment system</description>
        <label>Enrollment</label>
    </recordTypes>
    <recordTypes>
        <fullName>MeridianLink</fullName>
        <active>true</active>
        <description>Applicants received from the MeridianLink system</description>
        <label>MeridianLink</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCI</fullName>
        <active>true</active>
        <description>Applicants received from the TCI system</description>
        <label>TCI</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>